all changes are needed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
          </div>
 
    </section>
-   <div container="main-area">
+   
+   <section>
+          <div class="main-area">
         <div class="half-width">
             <img src="images/female/Person Image.png" alt="width="300" hight="500">      
      
