changes are needed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          </div>
 
    </section>
-   
+
    <section>
           <div class="main-area">
         <div class="half-width">
@@ -52,7 +52,8 @@
 
    </section>
 
-   <section class="Experience-area">
+   <section>
+    <div class="Experience-area">
        <h2>Experiences</h2>
 
        <div id="full-stack" class="half-width single-experience">
@@ -68,6 +69,7 @@
            <p>They didn't offer me a job. But I made myself as a remove web developer. I made thir website and showed it to them. They liked it. And uploaded the content. It was fun working at Programing Hero.</p>
            
         </div>
+    </div>
    </section>
    <footer>
        <p>
