changes are needed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <section>
           <div class="main-area">
         <div class="half-width">
-            <img src="images/female/Person Image.png" alt="" width="300"  height="500">      
+            <img src="images/female/Person Image.png" alt=" height:400px;width:300px; ">      
      
         </div>
 
