--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <section>
           <div class="main-area">
         <div class="half-width">
-            <img src="images/female/Person Image.png" alt=" height:400px;width:300px; ">      
+            <img src="images/female/Person Image.png" alt=" height:70%; width:70%; ">      
      
         </div>
 
