--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <section>
           <div class="main-area">
         <div class="half-width">
-            <img src="images/female/Person Image.png" alt=" height:300px; width:250px; ">      
+            <img src="images/female/Person Image.png" alt=" height:300px; width:250px">      
      
         </div>
 
