--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
    <section>
           <div class="main-area">
         <div class="half-width">
-            <img src="images/female/Group 8425.png" alt=" height='300px' width'250px' ">
+            <img src="images/female/Group 8425.png" alt=" height="400px" width="350px" ">
+            <img src="images/female/Group 8425.png" alt=" height= width="250px" ">
                                     
         </div>
 
