--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section>
         <div class="main-area">
             <div class="half-width">
-                <img src="images/female/Person Image.png" alt="" height:400px; width:150px;>
+                <img src="images/female/Person Image.png" alt="" height="200" width="160">
             </div>
 
             <div class="half-width">
