All changes are accepted

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <section>
         <div class="main-area">
             <div class="half-width">
-                <img src="images/female/Person Image.png" alt="" height="400" width="100">
+                <img src="images/female/Person Image.png" alt="">
             </div>
 
             <div class="half-width">
                 <h2>About us</h2>
-                <h3> About us Become World's No. 1 Devoloper.</h3>
+                <h3> We are Well-food Network company.</h3>
                 <P> Hi, You know bad food are everywhere in Bangladesh. It is a one of main cause to illness. So, we
                     will offer you the best solution of our WELL FOOD NETWORK higenic and natural food world. Here are
                     available fresh and healthy foods collection.Please collect it. Please care you and cure the germ.
