changes are needed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section>
         <div class="main-area">
             <div class="half-width">
-                <img src="images/female/Person Image.png" alt="">
+                <img src="images/female/png-removebg-preview.png" alt="">
             </div>
 
             <div class="half-width">
@@ -45,7 +45,7 @@
                 <h3> We are Well-food Network company.</h3>
                 <P> Hi, You know bad food are everywhere in Bangladesh. It is a one of main cause to illness. So, we
                     will offer you the best solution of our WELL FOOD NETWORK higenic and natural food world. Here are
-                    available fresh and healthy foods collection.Please collect it. Please care you and cure the germ.
+                    available fresh and healthy foods collection.Please collect it. Please care it and cure from germ.
                 </P>
                 <a class="link-button" target="_blank" href="https://1drv.ms/w/s!AuY1yXj0xnb9jBz4ODWEH3fl9Zpx "> Contact
                     us</a>
