--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>well-food</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -34,23 +33,22 @@
 
     </section>
 
-    <section>
-        <div class="main-area">
-            <div class="half-width">
-                <img src="images/female/png-removebg-preview.png" alt="">
-            </div>
+    <section class="main-area">
+        <div class="half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
 
-            <div class="half-width">
-                <h2>About us</h2>
-                <h3> We are Well-food Network company.</h3>
-                <P> Hi, You know bad food are everywhere in Bangladesh. It is a one of main cause to illness. So, we
-                    will offer you the best solution of our WELL FOOD NETWORK higenic and natural food world. Here are
-                    available fresh and healthy foods collection.Please collect it. Please care it and cure from germ.
-                </P>
-                <a class="link-button" target="_blank" href="https://1drv.ms/w/s!AuY1yXj0xnb9jBz4ODWEH3fl9Zpx "> Contact
-                    us</a>
+        <div class="half-width">
+            <h2>About us</h2>
+            <h3> We are Well-food Network company.</h3>
+            <P> Hi, You know bad food are everywhere in Bangladesh. It is a one of main cause to illness. So, we
+                will offer you the best solution of our WELL FOOD NETWORK higenic and natural food world. Here are
+                available fresh and healthy foods collection.Please collect it. Please care it and cure from germ.
+            </P>
+            <a class="link-button" target="_blank" href="https://1drv.ms/w/s!AuY1yXj0xnb9jBz4ODWEH3fl9Zpx "> Contact
+                us</a>
 
-            </div>
+        </div>
 
         </div>
 
