changes are needed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section class="main-area">
         <div class="half-width">
-            <img src="images/female/Person Image.png" alt="" height="200">
+            <img src="images/female/Person Image.png-3.png" alt="" height="" width="">
         </div>
 
         <div class="half-width">
