this changes are needed

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                     efficeint. I didn't, server and secdcurity. I will give you 100% web solution .</p>
             </div>
 
-            <div id="full-stack" class="Second-width single-experience">
+            <div id="Second-stack" class="Second-width single-experience">
                 <h2>Fresh Vegitable recipies</h2>
                 <h3 class="orange-highlight"> 2021 - Present | Pro Level Web Developer</h3 class="orange-highlight">
                 <p>I am the master of HTML, CSS and Javacript. I know evrething needed to make a website function
                     efficeint. I didn't, server and secdcurity. I will give you 100% web solution .</p>
             </div>
 
-            <div id="full-stack" class="half-width single-experience"></div>
+
             <div id="baby-web" class="half-width single-experience">
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
