--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     <section>
         <div class="My recipies">
             <h2>Experiences</h2>
-            <div id="full-stack" class="half-width single-experience">
+            <div id="full-stack" class="Third-width single-experience">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="orange-highlight"> 2021 - Present | Pro Level Web Developer</h3 class="orange-highlight">
                 <p>I am the master of HTML, CSS and Javacript. I know evrething needed to make a website function
                     efficeint. I didn't, server and secdcurity. I will give you 100% web solution .</p>
             </div>
 
-            <div id="Second-stack" class="Second-width single-experience">
+            <div id="Second-stack" class="Third-width single-experience">
                 <h2>Fresh Vegitable recipies</h2>
                 <h3 class="orange-highlight"> 2021 - Present | Pro Level Web Developer</h3 class="orange-highlight">
                 <p>I am the master of HTML, CSS and Javacript. I know evrething needed to make a website function
@@ -72,7 +72,7 @@
             </div>
 
 
-            <div id="baby-web" class="half-width single-experience">
+            <div id="baby-web" class="third-width single-experience">
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made thir website and
