all type changes are needed

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made thir website and
                     showed it to them. They liked it. And uploaded the content. It was fun working at Programing Hero.
                 </p>
-
             </div>
+        </div>
         </div>
     </section>
     <footer>
