changes are needed

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     </section>
 
     <section class="main-area">
-        <div class="second-width">
+        <div class="half-width">
             <img src="images/female/Person Image.png-3.png" alt="" height="" width="">
         </div>
 
-        <div class="second-width">
+        <div class="half-width">
             <h2>About us</h2>
             <h3> We are Well-food Network company.</h3>
             <P> Hi, You know bad food are everywhere in Bangladesh. It is a one of main cause to illness. So, we
