--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                 <h3 class="orange-highlight"> 2021 - Present | Pro Level Web Developer</h3 class="orange-highlight">
                 <p>I am the master of HTML, CSS and Javacript. I know evrething needed to make a website function
                     efficeint. I didn't, server and secdcurity. I will give you 100% web solution .</p>
+                <img src="images/food/Project Cover.png-1.png" alt="">
+
             </div>
 
             <div id="second-stack" class="third-width single-experience">
@@ -69,6 +71,7 @@
                 <h3 class="orange-highlight"> 2021 - Present | Pro Level Web Developer</h3 class="orange-highlight">
                 <p>I am the master of HTML, CSS and Javacript. I know evrething needed to make a website function
                     efficeint. I didn't, server and secdcurity. I will give you 100% web solution .</p>
+                <img src="images/food/Project Cover1.png-1.png" alt="">
             </div>
 
 
@@ -78,6 +81,7 @@
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made thir website and
                     showed it to them. They liked it. And uploaded the content. It was fun working at Programing Hero.
                 </p>
+                <img src="images/food/Project Cover5.png-1.png" alt="">
             </div>
         </div>
         </div>
