changes are needed

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
     <section>
         <div class="My recipies">
+
             <div id="full-stack" class="third-width single-experience">
                 <img src="images/food/Project Cover.png-1.png" alt="">
-                <h2>Experiences</h2>
-                <h2>This is a not good food exapmple for health</h2>
-                <h3 class="orange-highlight"> 2021 - Present | Pro Level Web Developer</h3 class="orange-highlight">
+                <h2>This is not a good food exapmple for health</h2>
+                <h3 class="orange-highlight"> Please avoid this food are maximum time</h3 class="orange-highlight">
                 <p> We should tray to avoid rich food.Too much taking Rich food is a harmfull for helth. Please avoide
                     more Sweet, more cholesterol enrich food.more meats etc. foods </p>
 
