all changes are needed

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <p>Good food is the main source of energy of our human body, This picture showing you the safe food
                     example.We should to take this type of food more and more</p>
             </div>
+        </div>
 
     </section>
 
