changes are needed

--- a/index.html
+++ b/index.html
@@ -54,57 +54,52 @@
 
     </section>
 
-    <section>
-        <div class="My recipies">
+    <section class="My-recipies">
 
-            <div id="full-stack" class="third-width single-experience">
-                <img src="images/food/Project Cover.png-1.png" alt="">
-                <h2>This is not a good food exapmple for health</h2>
-                <h3 class="orange-highlight"> Please avoid this food are maximum time</h3 class="orange-highlight">
-                <p> We should tray to avoid rich food.Too much taking Rich food is a harmfull for helth. Please avoide
-                    more Sweet, more cholesterol enrich food.more meats etc. foods </p>
+        <div id="full-stack" class="third-width single-experience">
+            <img src="images/food/Project Cover.png-1.png" alt="">
+            <h2>This is not a good food exapmple for health</h2>
+            <h3 class="orange-highlight"> Please avoid this food are maximum time</h3 class="orange-highlight">
+            <p> We should tray to avoid rich food.Too much taking Rich food is a harmfull for helth. Please avoide
+                more Sweet, more cholesterol enrich food.more meats etc. foods </p>
 
-            </div>
+        </div>
 
-            <div id="second-stack" class="third-width single-experience">
-                <img src="images/food/Project Cover1.png-1.png" alt="">
-                <h2>Fresh Vegitable recipies</h2>
-                <h3 class="orange-highlight"> This a good food Example, You may put up confident this type of food</h3
-                    class="orange-highlight">
-                <p> We are using this type of food for good health. </p>
+        <div id="second-stack" class="third-width single-experience">
+            <img src="images/food/Project Cover1.png-1.png" alt="">
+            <h2>Fresh Vegitable recipies</h2>
+            <h3 class="orange-highlight"> This a good food Example, You may put up confident this type of food</h3
+                class="orange-highlight">
+            <p> We are using this type of food for good health. </p>
 
-            </div>
+        </div>
 
-            <div id="baby-web" class="third-width single-experience">
-                <img src="images/food/Project Cover5.png-1.png" alt="">
-                <h2>We are reaching on the best food example </h2>
-                <h3 class="orange-highlight">Please try to put up this type of food in your daily manue</h3
-                    class="orange-highlight">
-                <p>Good food is the main source of energy of our human body, This picture showing you the safe food
-                    example.We should to take this type of food more and more</p>
-            </div>
+        <div id="baby-web" class="third-width single-experience">
+            <img src="images/food/Project Cover5.png-1.png" alt="">
+            <h2>We are reaching on the best food example </h2>
+            <h3 class="orange-highlight">Please try to put up this type of food in your daily manue</h3
+                class="orange-highlight">
+            <p>Good food is the main source of energy of our human body, This picture showing you the safe food
+                example.We should to take this type of food more and more</p>
+        </div>
+    </section>
+
+
+    <section class="More about us">
+
+        <div id="baby-web" class="third-width single-experience">
+
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made thir website and
+                showed it to them. They liked it. And uploaded the content. It was fun working at Programing
+                Hero.
+            </p>
+            <img src="images/food/Project Cover5.png-1.png" alt="">
         </div>
 
     </section>
 
-
-    <section>
-        <div class="More about us">
-            <div id="baby-web" class="third-width single-experience">
-
-                <h2>Baby Web Developer</h2>
-                <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made thir website and
-                    showed it to them. They liked it. And uploaded the content. It was fun working at Programing
-                    Hero.
-                </p>
-                <img src="images/food/Project Cover5.png-1.png" alt="">
-            </div>
-        </div>
-    </section>
-    </div>
-    </div>
-    </section>
     <footer>
         <p>
             @ MIPolash 2021, All right reserved @
