changes are needed

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </section>
 
-    <section class="My-recipies">
+    <section class="my-recipies">
 
         <div id="full-stack" class="third-width single-experience">
             <img src="images/food/Project Cover.png-1.png" alt="">
@@ -86,8 +86,8 @@
 
 
     <section class="More about us">
-
-        <div id="baby-web" class="third-width single-experience">
+        <h1>More about us</h1>
+        <div id="big-web" class="fourth-width double-experience">
 
             <h2>Baby Web Developer</h2>
             <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
@@ -105,6 +105,8 @@
             @ MIPolash 2021, All right reserved @
         </p>
     </footer>
+
+
 </body>
 
 </html>
