change are needed

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </p>
     <section class="More about us">
         <h1>More about us</h1>
-        <div id="big-web" class="fourth-width double-experience">
+        <div id="big-web" class="fourth-width single-experience">
 
             <h2>Baby Web Developer</h2>
             <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
