All changes are needed

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
     </section>
     </p>
-    <section class="More about us">
+    <section class="about-us">
         <h1>More about us</h1>
         <div id="big-web" class="fourth-width single-experience">
 
