All changes are needed

--- a/index.html
+++ b/index.html
@@ -85,16 +85,15 @@
     </section>
     </p>
     <section class="about-us">
-        <h1>More about us</h1>
+
         <div id="big-web" class="fourth-width single-experience">
 
-            <h2>Baby Web Developer</h2>
+            <h2>More about us</h2>
             <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made thir website and
-                showed it to them. They liked it. And uploaded the content. It was fun working at Programing
-                Hero.
-            </p>
-            <img src="images/food/Project Cover5.png-1.png" alt="">
+            <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                alt="">
+            <img src="images/male/attractive-man-eating-hamburger-he-260nw-310832510-removebg-preview.png" alt="">
+            <img src="images/male/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
         </div>
 
     </section>
