changes are needed

--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@
     <section class="about-us">
 
         <div id="big-web" class="fourth-width single-experience">
-
-            <h2>More about us</h2>
-            <h3 class="orange-highlight">2020 - 2021 | Programing Hero Learner</h3 class="orange-highlight">
+            <h2 class="orange-highlight">More about us</h2 class="orange-highlight">
             <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
                 alt="">
-            <img src="images/male/attractive-man-eating-hamburger-he-260nw-310832510-removebg-preview.png" alt="">
+            <img src="images/male/guy-eats-hot-dog-which-himself-has-prepared-street-food-young-man-blue-shirt-eats-hot-dog-white-background-100449486-removebg-preview.png"
+                alt="">
             <img src="images/male/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
         </div>
 
