--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="half-width">
             <img src="images/female/Group 8425.png" alt="">
-            <h2>This is a well food for you.</h2>
+            <h2><span class="orange-highlight">This is a well food for you.</span></h2>
         </div>
 
     </section>
@@ -70,7 +70,7 @@
             <h2>Fresh Vegitable recipies</h2>
             <h3 class="orange-highlight"> This a good food Example, You may put up confident this type of food</h3
                 class="orange-highlight">
-            <p> We are using this type of food for good health. </p>
+            <p> We are using this type of food for good health.We should to take this type of food but not more </p>
 
         </div>
 
@@ -80,7 +80,7 @@
             <h3 class="orange-highlight">Please try to put up this type of food in your daily manue</h3
                 class="orange-highlight">
             <p>Good food is the main source of energy of our human body, This picture showing you the safe food
-                example.We should to take this type of food more and more</p>
+                example.</p>
         </div>
     </section>
     </p>
