change are needed

--- a/index.html
+++ b/index.html
@@ -97,13 +97,18 @@
 
     </section>
 
+    <section>
+        <div class="footer">
+            <h3><span class="orange-highlight">WELL FOOD</span>NETWORK</h3>
+            <h5>EAT HEALTY TO LIVE HEALTHY, LIVE HEALTY TO LIFE HEALTY</h5>
 
-    <footer>
-        <p>
-            @ MIPolash 2021, All right reserved @
-        </p>
-    </footer>
+            </P>
+            <p>
+                @ MIPolash 2021, All right reserved @
+            </p>
 
+        </div>
+    </section>
 
 </body>
 
