all changes are need to applied

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     </section>
 
-    <section>
+    <footer>
         <div class="footer">
             <h3><span class="orange-highlight">WELL FOOD</span>NETWORK</h3>
             <h5>EAT HEALTY TO LIVE HEALTHY, LIVE HEALTY TO LIFE HEALTY</h5>
@@ -108,8 +108,8 @@
             </p>
 
         </div>
-    </section>
 
+    </footer>
 </body>
 
 </html>
